--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,11 @@ plugins {
 }
 
 android {
+
+    buildFeatures {
+
+        viewBinding true
+    }
     namespace 'com.example.snackaudiobook'
     compileSdk 33
 
