--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
-    id("com.google.gms.google-services") version "4.3.15" apply true
+    id("com.google.gms.google-services")
 }
 
 android {
@@ -41,7 +41,7 @@ android {
 dependencies {
     //firebase
 
-    implementation platform('com.google.firebase:firebase-bom:32.1.1')
+    implementation(platform("com.google.firebase:firebase-bom:32.2.3"))
     implementation 'com.google.firebase:firebase-firestore-ktx'
     implementation 'com.google.firebase:firebase-storage'
 
